--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -7,6 +7,11 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.3"
+openid = "0.14.0"
+reqwest = "0.12.5"
+serde = "1.0.204"
+serde_json = "1.0.120"
+terminal-banner = "0.4.1"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
