--- a/engine/compose.yaml
+++ b/engine/compose.yaml
@@ -5,3 +5,13 @@ services:
     image: ghcr.io/v3xlabs/v3x-property-engine:latest
     ports:
       - "3000:3000"
+  # Database
+  postgres:
+    image: postgres:16.3
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
+    ports:
+      - "5432:5432"
