--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -11,6 +11,7 @@ openid = "0.14.0"
 reqwest = "0.12.5"
 serde = "1.0.204"
 serde_json = "1.0.120"
+sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
 terminal-banner = "0.4.1"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1.40"
