--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.3"
+dotenv = "0.15.0"
+dotenvy = "0.15.7"
 openid = "0.14.0"
 reqwest = "0.12.5"
 serde = "1.0.204"
