Refactor to poem and introduce sqlx

--- a/engine/.env.template
+++ b/engine/.env.template
@@ -5,4 +5,4 @@ OPENID_REDIRECT=http://localhost:3000/callback
 OPENID_ISSUER=http://localhost:8080/realms/master
 
 # Postgres Database
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/property
