--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -6,15 +6,21 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
 axum = "0.7.3"
 dotenv = "0.15.0"
 dotenvy = "0.15.7"
 openid = "0.14.0"
+poem = "3.0.4"
+poem-openapi = { version = "5.0.3", features = ["email", "email_address", "swagger-ui"] }
 reqwest = "0.12.5"
 serde = "1.0.204"
 serde_json = "1.0.120"
-sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
+sqlx = { version = "0.7.4", features = ["runtime-async-std", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
 terminal-banner = "0.4.1"
-tokio = { version = "1", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+
+[features]
+default = ["oauth2"]
+oauth2 = []
