--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
 bigdecimal = { version = "0.4.5", features = ["serde"] }
 chrono = "0.4.38"
+color-eyre = "0.6.3"
 dotenv = "0.15.0"
 dotenvy = "0.15.7"
 openid = "0.14.0"
