--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "devDependencies": {
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
+        "@types/url-search-params": "^1.1.2",
         "@typescript-eslint/parser": "^7.17.0",
         "eslint": "^9.8.0",
         "eslint-plugin-v3xlabs": "^1.6.5",
