--- a/engine/compose.yaml
+++ b/engine/compose.yaml
@@ -1,10 +1,22 @@
 # runs the engine on port 3000
 version: "3.9"
 services:
-  engine:
-    image: ghcr.io/v3xlabs/v3x-property-engine:latest
-    ports:
-      - "3000:3000"
+  # Engine
+  # engine:
+  #   image: ghcr.io/v3xlabs/v3x-property-engine:latest
+  #   # build:
+  #   #   context: .
+  #   #   dockerfile: .build/Dockerfile
+  #   ports:
+  #     - "3000:3000"
+  #   env_file: .env
+  #     # OPENID_DISCOVERY_URL=http://localhost:8080/realms/master/.well-known/openid-configuration
+  #   network_mode: host
+  #   depends_on:
+  #     - postgres
+  #     - keycloak
+  #   # networks:
+  #   #   - default
   # Database
   postgres:
     image: postgres:16.3
@@ -12,6 +24,42 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      POSTGRES_DB: property
     ports:
       - "5432:5432"
+    # networks:
+    #   - default
+  # Keycloak
+  keycloak:
+    image: keycloak/keycloak:25.0
+    restart: always
+    environment:
+      KC_DB: postgres
+      KC_DB_URL: jdbc:postgresql://postgres:5432/postgres
+      KC_DB_USERNAME: postgres
+      KC_DB_PASSWORD: postgres
+
+      KC_HOSTNAME: localhost
+      KC_HOSTNAME_PORT: 8080
+      KC_HOSTNAME_STRICT: false
+      KC_HOSTNAME_STRICT_HTTPS: false
+
+      KC_LOG_LEVEL: info
+      KC_METRICS_ENABLED: true
+      KC_HEALTH_ENABLED: true
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+      # KEYCLOAK_IMPORT: /tmp/realm.json
+    command: start-dev
+    depends_on:
+      - postgres
+    ports:
+      - "8080:8080"
+    # networks:
+    #   - default
+    # volumes:
+      # - ./realm.json:/tmp/realm.json
+ 
+# networks:
+#   default:
+#     driver: bridge
