--- a/web/package.json
+++ b/web/package.json
@@ -2,7 +2,7 @@
     "name": "web",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "vite",
@@ -13,6 +13,7 @@
     "author": "",
     "license": "GPL-3",
     "dependencies": {
+        "@tanstack/react-router": "^1.45.14",
         "@vitejs/plugin-react": "^4.3.1",
         "autoprefixer": "^10.4.19",
         "postcss": "^8.4.38",
@@ -24,6 +25,8 @@
         "zustand": "^4.5.4"
     },
     "devDependencies": {
+        "@tanstack/router-devtools": "^1.45.14",
+        "@tanstack/router-plugin": "^1.45.13",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@types/url-search-params": "^1.1.2",
