--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "vite",
         "build": "vite build",
-        "lint": "eslint"
+        "lint": "eslint -c .eslintrc.json --ext .ts ./src"
     },
     "keywords": [],
     "author": "",
@@ -35,7 +35,7 @@
         "@types/react-dom": "^18.3.0",
         "@types/url-search-params": "^1.1.2",
         "@typescript-eslint/parser": "^7.17.0",
-        "eslint": "^9.8.0",
+        "eslint": "^8.57.0",
         "eslint-plugin-v3xlabs": "^1.6.5",
         "typescript": "^5.5.4"
     }
