--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "vite",
         "build": "vite build",
-        "lint": "eslint -c .eslintrc.json --ext .ts ./src"
+        "lint": "eslint -c .eslintrc.json"
     },
     "keywords": [],
     "author": "",
@@ -25,6 +25,7 @@
         "react-dom": "^18.3.1",
         "swr": "^2.2.5",
         "tailwindcss": "^3.4.3",
+        "ua-parser-js": "^1.0.38",
         "vite": "^5.2.10",
         "zustand": "^4.5.4"
     },
@@ -33,6 +34,7 @@
         "@tanstack/router-plugin": "^1.45.13",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
+        "@types/ua-parser-js": "^0.7.39",
         "@types/url-search-params": "^1.1.2",
         "@typescript-eslint/parser": "^7.17.0",
         "eslint": "^8.57.0",
