--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -12,14 +12,34 @@ chrono = "0.4.38"
 color-eyre = "0.6.3"
 dotenv = "0.15.0"
 dotenvy = "0.15.7"
+hex = "0.4.3"
+hmac = "0.12.1"
 openid = "0.14.0"
-poem = "3.0.4"
-poem-openapi = { version = "5.0.3", features = ["chrono", "uuid", "email", "email_address", "redoc", "static-files"] }
+poem = { version = "3.0.4", git = "https://github.com/poem-web/poem", branch = "master" }
+poem-openapi = { version = "5", git = "https://github.com/poem-web/poem", branch = "master", features = [
+    "chrono",
+    "uuid",
+    "sqlx",
+    "url",
+    "email",
+    "email_address",
+    "redoc",
+    "static-files",
+] }
 reqwest = "0.12.5"
 serde = "1.0.204"
 serde_json = "1.0.120"
 serde_with = { version = "3.9.0", features = ["json", "chrono"] }
-sqlx = { version = "0.7.4", features = ["runtime-async-std", "tls-rustls", "postgres", "uuid", "chrono", "json", "ipnetwork"] }
+sha2 = "0.10.8"
+sqlx = { version = "0.7.4", features = [
+    "runtime-async-std",
+    "tls-rustls",
+    "postgres",
+    "uuid",
+    "chrono",
+    "json",
+    "ipnetwork",
+] }
 terminal-banner = "0.4.1"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
