--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
         "@tanstack/react-router": "^1.45.14",
         "@vitejs/plugin-react": "^4.3.1",
         "autoprefixer": "^10.4.19",
+        "clsx": "^2.1.1",
         "eslint-plugin-unused-imports": "^4.0.1",
         "globals": "^15.8.0",
         "postcss": "^8.4.38",
