--- a/web/package.json
+++ b/web/package.json
@@ -21,9 +21,11 @@
         "clsx": "^2.1.1",
         "eslint-plugin-unused-imports": "^4.0.1",
         "globals": "^15.8.0",
+        "leaflet": "^1.9.4",
         "postcss": "^8.4.38",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-leaflet": "^4.2.1",
         "swr": "^2.2.5",
         "tailwindcss": "^3.4.3",
         "ua-parser-js": "^1.0.38",
@@ -33,6 +35,7 @@
     "devDependencies": {
         "@tanstack/router-devtools": "^1.45.14",
         "@tanstack/router-plugin": "^1.45.13",
+        "@types/leaflet": "^1.9.12",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@types/ua-parser-js": "^0.7.39",
