--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,10 @@
     "dependencies": {
         "@eslint/eslintrc": "^3.1.0",
         "@eslint/js": "^9.8.0",
+        "@radix-ui/colors": "^3.0.0",
+        "@radix-ui/react-avatar": "^1.1.1",
+        "@radix-ui/react-dropdown-menu": "^2.1.2",
+        "@radix-ui/react-hover-card": "^1.1.2",
         "@tanstack/react-router": "^1.45.14",
         "@vitejs/plugin-react": "^4.3.1",
         "autoprefixer": "^10.4.19",
@@ -28,6 +32,7 @@
         "react-leaflet": "^4.2.1",
         "swr": "^2.2.5",
         "tailwindcss": "^3.4.3",
+        "ts-pattern": "^5.5.0",
         "ua-parser-js": "^1.0.38",
         "vite": "^5.2.10",
         "zustand": "^4.5.4"
