--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,8 @@
         "@radix-ui/react-avatar": "^1.1.1",
         "@radix-ui/react-dropdown-menu": "^2.1.2",
         "@radix-ui/react-hover-card": "^1.1.2",
+        "@radix-ui/react-label": "^2.1.0",
+        "@tanstack/react-query": "^5.x.x",
         "@tanstack/react-router": "^1.45.14",
         "@vitejs/plugin-react": "^4.3.1",
         "autoprefixer": "^10.4.19",
@@ -29,8 +31,8 @@
         "postcss": "^8.4.38",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-icons": "^5.3.0",
         "react-leaflet": "^4.2.1",
-        "swr": "^2.2.5",
         "tailwindcss": "^3.4.3",
         "ts-pattern": "^5.5.0",
         "ua-parser-js": "^1.0.38",
