--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -26,7 +26,9 @@ poem-openapi = { version = "5", git = "https://github.com/poem-web/poem", branch
     "redoc",
     "static-files",
 ] }
+regex = "1.11.1"
 reqwest = "0.12.5"
+scraper = "0.21.0"
 serde = "1.0.204"
 serde_json = "1.0.120"
 serde_with = { version = "3.9.0", features = ["json", "chrono"] }
@@ -41,6 +43,7 @@ sqlx = { version = "0.7.4", features = [
     "ipnetwork",
 ] }
 terminal-banner = "0.4.1"
+thiserror = "2.0.3"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 url = { version = "2.5.2", features = ["serde"] }
