--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,8 @@
         "@radix-ui/react-dropdown-menu": "^2.1.2",
         "@radix-ui/react-hover-card": "^1.1.2",
         "@radix-ui/react-label": "^2.1.0",
+        "@react-three/drei": "^9.117.3",
+        "@react-three/fiber": "^8.17.10",
         "@tanstack/react-query": "^5.x.x",
         "@tanstack/react-router": "^1.45.14",
         "@vitejs/plugin-react": "^4.3.1",
@@ -34,6 +36,8 @@
         "react-icons": "^5.3.0",
         "react-leaflet": "^4.2.1",
         "tailwindcss": "^3.4.3",
+        "three": "^0.170.0",
+        "troika-three-text": "^0.52.2",
         "ts-pattern": "^5.5.0",
         "ua-parser-js": "^1.0.38",
         "vite": "^5.2.10",
@@ -45,6 +49,7 @@
         "@types/leaflet": "^1.9.12",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
+        "@types/three": "^0.170.0",
         "@types/ua-parser-js": "^0.7.39",
         "@types/url-search-params": "^1.1.2",
         "@typescript-eslint/parser": "^7.17.0",
