--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -30,7 +30,7 @@ regex = "1.11.1"
 reqwest = "0.12.5"
 scraper = "0.21.0"
 serde = "1.0.204"
-serde_json = "1.0.120"
+serde_json = { version = "1.0", features = ["raw_value"] }
 serde_with = { version = "3.9.0", features = ["json", "chrono"] }
 sha2 = "0.10.8"
 sqlx = { version = "0.7.4", features = [
