--- a/engine/compose.yaml
+++ b/engine/compose.yaml
@@ -58,7 +58,13 @@ services:
     #   - default
     # volumes:
       # - ./realm.json:/tmp/realm.json
- 
+  meilisearch:
+    image: getmeili/meilisearch:v1.11
+    environment:
+      MEILI_MASTER_KEY: master
+    ports:
+      - "7700:7700"
+
 # networks:
 #   default:
 #     driver: bridge
