Update meilisearch & id types

--- a/engine/.env.example
+++ b/engine/.env.example
@@ -6,3 +6,7 @@ OPENID_ISSUER=http://localhost:8080/realms/master
 
 # Postgres Database
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/property
+
+# Meilisearch
+MEILISEARCH_URL=http://localhost:7700
+MEILISEARCH_MASTER_KEY=master
