--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.93"
 async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
 bigdecimal = { version = "0.4.5", features = ["serde"] }
 chrono = "0.4.38"
@@ -14,6 +15,7 @@ dotenv = "0.15.0"
 dotenvy = "0.15.7"
 hex = "0.4.3"
 hmac = "0.12.1"
+meilisearch-sdk = "0.27.1"
 openid = "0.14.0"
 poem = { version = "3.0.4", git = "https://github.com/poem-web/poem", branch = "master" }
 poem-openapi = { version = "5", git = "https://github.com/poem-web/poem", branch = "master", features = [
