--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,8 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "vite",
         "build": "vite build",
-        "lint": "eslint -c .eslintrc.json"
+        "lint": "eslint -c .eslintrc.json",
+        "api-schema": "openapi-typescript http://localhost:3000/openapi.json -t -o ./src/api/schema.gen.ts"
     },
     "keywords": [],
     "author": "",
@@ -55,6 +56,7 @@
         "@typescript-eslint/parser": "^7.17.0",
         "eslint": "^8.57.0",
         "eslint-plugin-v3xlabs": "^1.6.5",
+        "openapi-typescript": "^7.4.3",
         "typescript": "^5.5.4"
     }
 }
