--- a/web/package.json
+++ b/web/package.json
@@ -30,6 +30,7 @@
         "clsx": "^2.1.1",
         "eslint-plugin-unused-imports": "^4.0.1",
         "globals": "^15.8.0",
+        "javascript-time-ago": "^2.5.11",
         "leaflet": "^1.9.4",
         "postcss": "^8.4.38",
         "react": "^18.3.1",
