--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
         "@radix-ui/react-label": "^2.1.0",
         "@react-three/drei": "^9.117.3",
         "@react-three/fiber": "^8.17.10",
+        "@tanstack/react-form": "^0.39.0",
         "@tanstack/react-query": "^5.x.x",
         "@tanstack/react-router": "^1.45.14",
         "@vitejs/plugin-react": "^4.3.1",
