--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
         "@eslint/eslintrc": "^3.1.0",
         "@eslint/js": "^9.8.0",
         "@radix-ui/colors": "^3.0.0",
+        "@radix-ui/react-alert-dialog": "^1.1.2",
         "@radix-ui/react-avatar": "^1.1.1",
         "@radix-ui/react-dropdown-menu": "^2.1.2",
         "@radix-ui/react-hover-card": "^1.1.2",
