--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -7,7 +7,8 @@
         "plugin:v3xlabs/recommended"
     ],
     "ignorePatterns": [
-        "!**/*"
+        "!**/*",
+        "src/**/*.gen.ts"
     ],
     "plugins": [
         "v3xlabs"
@@ -15,5 +16,7 @@
     "env": {
         "browser": true
     },
-    "rules": {}
+    "rules": {
+        "sonarjs/cognitive-complexity": "off"
+    }
 }
