Introduce integration tests

--- a/web/package.json
+++ b/web/package.json
@@ -1,65 +1,68 @@
 {
-    "name": "web",
-    "version": "1.0.0",
-    "description": "",
-    "type": "module",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "vite",
-        "build": "vite build",
-        "lint": "eslint -c .eslintrc.json",
-        "api-schema": "openapi-typescript http://localhost:3000/openapi.json -t -o ./src/api/schema.gen.ts"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "GPL-3",
-    "dependencies": {
-        "@eslint/eslintrc": "^3.1.0",
-        "@eslint/js": "^9.8.0",
-        "@radix-ui/colors": "^3.0.0",
-        "@radix-ui/react-alert-dialog": "^1.1.2",
-        "@radix-ui/react-avatar": "^1.1.1",
-        "@radix-ui/react-dropdown-menu": "^2.1.2",
-        "@radix-ui/react-hover-card": "^1.1.2",
-        "@radix-ui/react-label": "^2.1.0",
-        "@react-three/drei": "^9.117.3",
-        "@react-three/fiber": "^8.17.10",
-        "@tanstack/react-form": "^0.39.0",
-        "@tanstack/react-query": "^5.x.x",
-        "@tanstack/react-router": "^1.45.14",
-        "@vitejs/plugin-react": "^4.3.1",
-        "autoprefixer": "^10.4.19",
-        "clsx": "^2.1.1",
-        "eslint-plugin-unused-imports": "^4.0.1",
-        "globals": "^15.8.0",
-        "javascript-time-ago": "^2.5.11",
-        "leaflet": "^1.9.4",
-        "postcss": "^8.4.38",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "react-icons": "^5.3.0",
-        "react-leaflet": "^4.2.1",
-        "tailwindcss": "^3.4.3",
-        "three": "^0.170.0",
-        "troika-three-text": "^0.52.2",
-        "ts-pattern": "^5.5.0",
-        "ua-parser-js": "^1.0.38",
-        "vite": "^5.2.10",
-        "zustand": "^4.5.4"
-    },
-    "devDependencies": {
-        "@tanstack/router-devtools": "^1.45.14",
-        "@tanstack/router-plugin": "^1.45.13",
-        "@types/leaflet": "^1.9.12",
-        "@types/react": "^18.3.3",
-        "@types/react-dom": "^18.3.0",
-        "@types/three": "^0.170.0",
-        "@types/ua-parser-js": "^0.7.39",
-        "@types/url-search-params": "^1.1.2",
-        "@typescript-eslint/parser": "^7.17.0",
-        "eslint": "^8.57.0",
-        "eslint-plugin-v3xlabs": "^1.6.5",
-        "openapi-typescript": "^7.4.3",
-        "typescript": "^5.5.4"
-    }
+  "name": "web",
+  "version": "1.0.0",
+  "description": "",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "test:ui": "playwright test --ui",
+    "test": "playwright test",
+    "lint": "eslint -c .eslintrc.json",
+    "api-schema": "openapi-typescript http://localhost:3000/openapi.json -t -o ./src/api/schema.gen.ts"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "GPL-3",
+  "dependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.8.0",
+    "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-hover-card": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@react-three/drei": "^9.117.3",
+    "@react-three/fiber": "^8.17.10",
+    "@tanstack/react-form": "^0.39.0",
+    "@tanstack/react-query": "^5.x.x",
+    "@tanstack/react-router": "^1.45.14",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.19",
+    "clsx": "^2.1.1",
+    "eslint-plugin-unused-imports": "^4.0.1",
+    "globals": "^15.8.0",
+    "javascript-time-ago": "^2.5.11",
+    "leaflet": "^1.9.4",
+    "postcss": "^8.4.38",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
+    "tailwindcss": "^3.4.3",
+    "three": "^0.170.0",
+    "troika-three-text": "^0.52.2",
+    "ts-pattern": "^5.5.0",
+    "ua-parser-js": "^1.0.38",
+    "vite": "^5.2.10",
+    "zustand": "^4.5.4"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.49.0",
+    "@tanstack/router-devtools": "^1.45.14",
+    "@tanstack/router-plugin": "^1.45.13",
+    "@types/leaflet": "^1.9.12",
+    "@types/node": "^22.10.1",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/three": "^0.170.0",
+    "@types/ua-parser-js": "^0.7.39",
+    "@types/url-search-params": "^1.1.2",
+    "@typescript-eslint/parser": "^7.17.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-v3xlabs": "^1.6.5",
+    "openapi-typescript": "^7.4.3",
+    "typescript": "^5.5.4"
+  }
 }
