--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -14,7 +14,8 @@
         "v3xlabs"
     ],
     "env": {
-        "browser": true
+        "browser": true,
+        "node": true
     },
     "rules": {
         "sonarjs/cognitive-complexity": "off"
