--- a/engine/.env.example
+++ b/engine/.env.example
@@ -1,8 +1,8 @@
 # OpenID Connect OAuth 2.0
-OPENID_CLIENT_ID=devclient
-OPENID_CLIENT_SECRET=devclient
+OPENID_CLIENT_ID=v3x-property
+OPENID_CLIENT_SECRET=v3x-property-secret
 OPENID_REDIRECT=http://localhost:3000/callback
-OPENID_ISSUER=http://localhost:8080/realms/master
+OPENID_ISSUER=http://localhost:8080/realms/v3x-property/
 
 # Postgres Database
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/property
