--- a/web/package.json
+++ b/web/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "test:ui": "playwright test --ui",
-    "test": "playwright test",
+    "test:prepare": "mkdir -p ./playwright/.auth && touch ./playwright/.auth",
+    "test:ui": "pnpm test:prepare && playwright test --ui",
+    "test": "pnpm test:prepare && playwright test",
     "lint": "eslint -c .eslintrc.json",
     "api-schema": "openapi-typescript http://localhost:3000/openapi.json -t -o ./src/api/schema.gen.ts"
   },
@@ -38,6 +39,7 @@
     "postcss": "^8.4.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "tailwindcss": "^3.4.3",
