--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-hover-card": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.17.10",
     "@tanstack/react-form": "^0.39.0",
@@ -31,6 +32,7 @@
     "@tanstack/react-router": "^1.45.14",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint-plugin-unused-imports": "^4.0.1",
     "globals": "^15.8.0",
@@ -42,7 +44,9 @@
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.3",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.170.0",
     "troika-three-text": "^0.52.2",
     "ts-pattern": "^5.5.0",
