Introduce toasts and update button colors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,11 @@
     "vsicons.associations.folders": [
         { "icon": "engine", "extensions": ["engine"], "format": "svg" }
     ],
+    "tailwindCSS.experimental.classRegex": [
+        [ "cva\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]", ],
+        [ "cvax\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]", ],
+        [ "cx\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]" ],
+        [ "cn\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]" ],
+        [ "tw\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]" ]
+    ]
 }
