--- a/web/package.json
+++ b/web/package.json
@@ -44,6 +44,7 @@
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
