Streamline api, Introduce item re-indexing, and introduce intelligence module

--- a/engine/.env.example
+++ b/engine/.env.example
@@ -10,3 +10,7 @@ DATABASE_URL=postgres://postgres:postgres@localhost:5432/property
 # Meilisearch
 MEILISEARCH_URL=http://localhost:7700
 MEILISEARCH_MASTER_KEY=master
+
+# Ollama
+OLLAMA_URL=http://localhost
+OLLAMA_PORT=11434
