WIP file uploads

--- a/engine/.env.example
+++ b/engine/.env.example
@@ -7,10 +7,10 @@ OPENID_ISSUER=http://localhost:8080/realms/v3x-property/
 # Postgres Database
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/property
 
-# Meilisearch
+# Meilisearch (Optional)
 MEILISEARCH_URL=http://localhost:7700
 MEILISEARCH_MASTER_KEY=master
 
-# Ollama
+# Ollama (Optional)
 OLLAMA_URL=http://localhost
 OLLAMA_PORT=11434
