--- a/engine/compose.yaml
+++ b/engine/compose.yaml
@@ -72,3 +72,9 @@ services:
       MEILI_MASTER_KEY: master
     ports:
       - "7700:7700"
+
+  minio:
+    image: minio/minio:latest
+    ports:
+      - "9000:9000"
+      - "9001:9001"
