Introduce storage module, migrate modules search & intelligence, include tests for renaming item

--- a/engine/.env.example
+++ b/engine/.env.example
@@ -7,6 +7,13 @@ OPENID_ISSUER=http://localhost:8080/realms/v3x-property/
 # Postgres Database
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/property
 
+# Minio S3 (Defaults)
+S3_ENDPOINT_URL=http://localhost:9000
+S3_REGION=us-east-1
+S3_BUCKET_NAME=property
+S3_ACCESS_KEY=minioadmin
+S3_SECRET_KEY=minioadmin
+
 # Meilisearch (Optional)
 MEILISEARCH_URL=http://localhost:7700
 MEILISEARCH_MASTER_KEY=master
