--- a/engine/.build/Dockerfile
+++ b/engine/.build/Dockerfile
@@ -34,6 +34,8 @@ ARG BINARY_NAME_DEFAULT
 ENV BINARY_NAME=$BINARY_NAME_DEFAULT
 # ARG MY_GREAT_CONFIG_DEFAULT
 # ENV MY_GREAT_CONFIG=$MY_GREAT_CONFIG_DEFAULT
+ARG RUNNER_IP
+ENV DATABASE_URL=postgres://postgres:postgres@${RUNNER_IP}:5432/postgres
 
 ENV RUST_LOG="error,$BINARY_NAME=info"
 COPY --from=builder /build-out/$BINARY_NAME /
