--- a/engine/.build/Dockerfile
+++ b/engine/.build/Dockerfile
@@ -23,7 +23,7 @@ COPY migrations ./migrations
 
 # Set the DATABASE_URL environment variable for the build process
 ARG DATABASE_URL
-ENV DATABASE_URL=${DATABASE_URL}
+ENV DATABASE_URL=$DATABASE_URL
 
 RUN set -x && cargo build --target x86_64-unknown-linux-musl --release
 RUN mkdir -p /build-out
