Improve tests & update CI

--- a/engine/.build/Dockerfile
+++ b/engine/.build/Dockerfile
@@ -27,6 +27,9 @@ COPY migrations ./migrations
 
 RUN echo "DATABASE_URL=$DATABASE_URL"
 
+# Debugging: Print the DATABASE_URL to verify it's being set
+RUN echo "DATABASE_URL during build: $DATABASE_URL"
+
 RUN set -x && DATABASE_URL=$DATABASE_URL cargo build --target x86_64-unknown-linux-musl --release
 RUN mkdir -p /build-out
 RUN set -x && cp target/x86_64-unknown-linux-musl/release/$BINARY_NAME /build-out/
