--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -51,5 +51,5 @@ jobs:
           tags: v3x-property-engine:latest
           push: false
           build-args: |
-            - BINARY_NAME=v3x-property-engine
-            - DATABASE_URL=postgres://postgres:postgres@${{ env.RUNNER_IP }}:5432/postgres
+            BINARY_NAME=v3x-property-engine
+            DATABASE_URL=postgres://postgres:postgres@${{ env.RUNNER_IP }}:5432/postgres
