--- a/engine/.build/Dockerfile
+++ b/engine/.build/Dockerfile
@@ -24,6 +24,7 @@ RUN ["/bin/bash", "-c", "set -x && rm target/x86_64-unknown-linux-musl/release/d
 # Now add the rest of the project and build the real main
 COPY src ./src
 COPY migrations ./migrations
+COPY .sqlx ./sqlx
 
 RUN echo "DATABASE_URL=$DATABASE_URL"
 
