--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -53,7 +53,7 @@ jobs:
 
       - name: Migrate db
         working-directory: ./engine
-        run: cargo install sqlx-cli --no-default-features --features native-tls,postgres && sqlx migrate run && sqlx migrate prepare
+        run: cargo install sqlx-cli --no-default-features --features native-tls,postgres && sqlx migrate run && sqlx prepare
 
 
       - name: Stop postgres via docker-compose dev
