--- a/engine/.build/Dockerfile
+++ b/engine/.build/Dockerfile
@@ -6,9 +6,6 @@ RUN groupadd -g 10001 -r dockergrp && useradd -r -g dockergrp -u 10001 dockeruse
 ARG BINARY_NAME_DEFAULT
 ENV BINARY_NAME=$BINARY_NAME_DEFAULT
 
-ARG DATABASE_URL
-ENV DATABASE_URL=$DATABASE_URL
-
 # Build the project with target x86_64-unknown-linux-musl
 
 # Build dummy main with the project's Cargo lock and toml
@@ -26,12 +23,7 @@ COPY src ./src
 COPY migrations ./migrations
 COPY .sqlx ./sqlx
 
-RUN echo "DATABASE_URL=$DATABASE_URL"
-
-# Debugging: Print the DATABASE_URL to verify it's being set
-RUN echo "DATABASE_URL during build: $DATABASE_URL"
-
-RUN set -x && DATABASE_URL=$DATABASE_URL cargo build --target x86_64-unknown-linux-musl --release
+RUN set -x && cargo build --target x86_64-unknown-linux-musl --release
 RUN mkdir -p /build-out
 RUN set -x && cp target/x86_64-unknown-linux-musl/release/$BINARY_NAME /build-out/
 
