--- a/engine/.build/Dockerfile
+++ b/engine/.build/Dockerfile
@@ -5,6 +5,7 @@ FROM clux/muslrust:stable as builder
 RUN groupadd -g 10001 -r dockergrp && useradd -r -g dockergrp -u 10001 dockeruser
 ARG BINARY_NAME_DEFAULT
 ENV BINARY_NAME=$BINARY_NAME_DEFAULT
+ENV SQLX_OFFLINE=true
 
 # Build the project with target x86_64-unknown-linux-musl
 
@@ -23,7 +24,7 @@ COPY src ./src
 COPY migrations ./migrations
 COPY .sqlx ./sqlx
 
-RUN set -x && cargo build --target x86_64-unknown-linux-musl --release
+RUN set -x && SQLX_OFFLINE=true cargo build --target x86_64-unknown-linux-musl --release
 RUN mkdir -p /build-out
 RUN set -x && cp target/x86_64-unknown-linux-musl/release/$BINARY_NAME /build-out/
 
