Upgrade docker compose experience

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,23 @@
 # OpenID Connect OAuth 2.0
 OPENID_CLIENT_ID=v3x-property
 OPENID_CLIENT_SECRET=v3x-property-secret
-OPENID_REDIRECT=http://localhost:3000/callback
-OPENID_ISSUER=http://localhost:8080/realms/v3x-property
+OPENID_REDIRECT=http://0.0.0.0:3000/callback
+OPENID_ISSUER=http://YOUR_IP_HERE:8080/realms/v3x-property
 
 # Postgres Database
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/property
+DATABASE_URL=postgres://postgres:postgres@postgres:5432/property
 
 # Minio S3 (Defaults)
-S3_ENDPOINT_URL=http://localhost:9000
+S3_ENDPOINT_URL=http://YOUR_IP_HERE:9000
 S3_REGION=us-east-1
 S3_BUCKET_NAME=property
 S3_ACCESS_KEY=minioadmin
 S3_SECRET_KEY=minioadmin
 
 # Meilisearch (Optional)
-MEILISEARCH_URL=http://localhost:7700
+MEILISEARCH_URL=http://YOUR_IP_HERE:7700
 MEILISEARCH_MASTER_KEY=master
 
 # Ollama (Optional)
-OLLAMA_URL=http://localhost
+OLLAMA_URL=http://YOUR_IP_HERE
 OLLAMA_PORT=11434
