--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -20,7 +20,7 @@ hmac = "0.12.1"
 meilisearch-sdk = "0.26.1"
 ollama-rs = "0.2.1"
 openid = "0.14.0"
-poem = { version = "3.0.4", git = "https://github.com/poem-web/poem", branch = "master" }
+poem = { version = "3.0.4", git = "https://github.com/poem-web/poem", branch = "master", features = ["rustls"] }
 poem-openapi = { version = "5", git = "https://github.com/poem-web/poem", branch = "master", features = [
     "chrono",
     "uuid",
@@ -33,6 +33,7 @@ poem-openapi = { version = "5", git = "https://github.com/poem-web/poem", branch
 ] }
 regex = "1.11.1"
 reqwest = "0.12.5"
+rustls = "0.23.19"
 scraper = "0.21.0"
 serde = "1.0.204"
 serde_json = { version = "1.0", features = ["raw_value"] }
