--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -17,6 +17,7 @@ dotenv = "0.15.0"
 dotenvy = "0.15.7"
 hex = "0.4.3"
 hmac = "0.12.1"
+hyper-rustls = "0.27.3"
 meilisearch-sdk = "0.26.1"
 ollama-rs = "0.2.1"
 openid = "0.14.0"
