--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -17,7 +17,6 @@ dotenv = "0.15.0"
 dotenvy = "0.15.7"
 hex = "0.4.3"
 hmac = "0.12.1"
-hyper-rustls = "0.27.3"
 meilisearch-sdk = "0.26.1"
 ollama-rs = "0.2.1"
 openid = "0.14.0"
@@ -55,6 +54,10 @@ thiserror = "2.0.3"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 url = { version = "2.5.2", features = ["serde"] }
+
+async-h1 = "2.3"
+async-tls = "0.11"
+rust-s3 = "0.35.1"
 
 [dependencies.uuid]
 version = "1.10.0"
