Update rustls in openid

--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -19,7 +19,7 @@ hex = "0.4.3"
 hmac = "0.12.1"
 meilisearch-sdk = "0.26.1"
 ollama-rs = "0.2.1"
-openid = "0.14.0"
+openid = { version = "0.14.0", default-features = false, features = ["rustls"] }
 poem = { version = "3.0.4", git = "https://github.com/poem-web/poem", branch = "master", features = [
     "rustls",
 ] }
