--- a/.github/workflows/engine_build.yaml
+++ b/.github/workflows/engine_build.yaml
@@ -47,7 +47,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Rust
-        run: rustup toolchain install stable --profile minimal --no-self-update
+        run: |
+          rustup toolchain install stable --profile minimal --no-self-update
+          rustup target add x86_64-unknown-linux-musl
 
       - name: Cache Rust
         uses: Swatinem/rust-cache@v2
