--- a/.github/workflows/engine_build.yaml
+++ b/.github/workflows/engine_build.yaml
@@ -51,6 +51,9 @@ jobs:
           rustup toolchain install stable --profile minimal --no-self-update
           rustup target add x86_64-unknown-linux-musl
 
+      - name: Install musl-tools
+        run: sudo apt-get update --yes && sudo apt-get install --yes musl-tools
+
       - name: Cache Rust
         uses: Swatinem/rust-cache@v2
         with:
