--- a/.github/workflows/engine_build.yaml
+++ b/.github/workflows/engine_build.yaml
@@ -41,12 +41,6 @@ jobs:
         ports:
           # Maps tcp port 5432 on service container to the host
           - 5432:5432
-    strategy:
-      fail-fast: false
-      matrix:
-        platform:
-          - target: x86_64-unknown-linux-musl
-            toolchain: stable
 
     steps:
       - name: Checkout
@@ -54,13 +48,11 @@ jobs:
 
       - name: Install Rust
         run: |
-          rustup set profile minimal
-          rustup toolchain install ${{ matrix.platform.toolchain }}
-          rustup default ${{ matrix.platform.toolchain }}
-          rustup override set ${{ matrix.platform.toolchain }}
+          rustup toolchain install stable --profile minimal --no-self-update
+          rustup target add x86_64-unknown-linux-musl
 
-      - name: Install cross
-        run: cargo install cross
+      - name: Install musl-tools
+        run: sudo apt-get update --yes && sudo apt-get install --yes musl-tools libssl-dev
 
       - name: Cache Rust
         uses: Swatinem/rust-cache@v2
