Introduce engine host mode

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,6 @@ MEILISEARCH_MASTER_KEY=master
 # Ollama (Optional)
 OLLAMA_URL=http://YOUR_IP_HERE
 OLLAMA_PORT=11434
+
+# Web Path
+WEB_PATH=../web/dist
